--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/basic_temp.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/basic_temp.html
@@ -4,8 +4,9 @@
 
 {%block title %} Basic Template {% endblock %}
 {% block body_content %}
-<!--
-<form method="post" action="{% url 'type_created' groupid %}" name="{{node_gs.name}}" id="{{node_gs.name}}"> -->
+<script type="text/javascript" src="/static/ndf/bower_components/jquery-ui/jquery-ui.min.js"></script>
+<script type="text/javascript" src="/static/ndf/bower_components/jquery-ui/jquery-ui.js"></script>
+
 <form method="post" action=" " name="{{node_gs.name}}" id="{{node_gs.name}}">
 {% csrf_token %} 
 
@@ -14,7 +15,7 @@
 
 <font size="5"> {{node_gs.name}} </font> 
 
-    <div style="display:table-row;">
+    <div style="display:table-row;" id ="basic_list">
         {% for bl in basic_list %}
         	{% for val,dummyval in bl.iteritems %}
         	<tr><td>
@@ -82,7 +83,7 @@
         <div id="{{each.name}}">
         <tr><td>
         <div style="display:table-cell;"> 
-           <font size="3"> {% firstof each.altnames each.name %} </font> 
+           <font size="3"> {% firstof each.altnames each.name %} {{each.id}} </font> 
         </div></td>
         <td>
             {% rts_fields each.name each.object_type groupid gs_struc|get_dict_item:'relation_set' %}
@@ -108,10 +109,14 @@ if(index>-1){
      required_fields.splice(index, 1);
 }
 var flag = 0;
+console.log(required_fields)
 
 $("form").submit(function(event) {
+    var flag = 0;
     for(reqfields in required_fields){
-        if($("#definitionlist [name = "+required_fields[reqfields]+" ]").val()){
+        console.log(required_fields[reqfields])
+
+        if($("#basic_list[Name = "+required_fields[reqfields]+" ]").val()){
             $("#"+required_fields[reqfields]+"_required").hide();
         }
         else{
