--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/graph_concept.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/graph_concept.html
@@ -1,15 +1,14 @@
 {% load i18n %}
-
+{% load cache %}
+{% cache 3600 graph_collection_static_head %}
 {% block head %}
-	
-<script src="https://code.jquery.com/jquery-2.2.3.js"   integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4="   crossorigin="anonymous"></script>	
+<script type="text/javascript" src="/static/ndf/bower_components/jquery-ui/jquery-ui.min.js"></script>
+<script type="text/javascript" src="/static/ndf/bower_components/jquery-ui/jquery-ui.js"></script>
   <!-- Scripts required for D3 graph -->
   <script type="text/javascript" src="/static/ndf/bower_components/d3/d3.min.js"></script> <!-- checked -->
   <script type="text/javascript" src="/static/ndf/bower_components/underscore/underscore.js"></script> <!-- checked -->
-  <script sync="text/javascript" src="/static/ndf/bower_components/FileSaver/FileSaver.js"></script> <!-- checked -->
-  
+  <script sync="text/javascript" src="/static/ndf/bower_components/FileSaver/FileSaver.js"></script> <!-- checked -->  
 {% endblock %}
-
 <style type="text/css">
 		#chart-concept .link
 		{
@@ -154,7 +153,6 @@
 	<!-- Div containing svg area -->
 		<div id="chart-concept"></div>
 			<script type="text/javascript">
-
 			var graphHeight = ($(window).height()*0.87), // Getting 87% of window height 
 				graphWidth  = ($(window).width()*0.77);	 // Getting 77% of window width 
 
