--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/admin_fields.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/admin_fields.html
@@ -25,8 +25,14 @@
   background-repeat:no-repeat; background-size: 48px 48px
   }
 
-  #list_widget {
+  .list_drawer_list {
     width: 500px;
+    height: 45px;
+  }
+
+  .list_drawer {
+    width: 500px;
+    height: 45px;
   }
   
 </style>
@@ -63,7 +69,7 @@
 </select>
 
 {% elif fields_type == "list" %}
-<div id="list_drawer" style="border-spacing:0px" class="list_drawer">
+<div id="list_drawer_list" style="border-spacing:0px" class="list_drawer_list">
 
   
   {% if fields_name == "subject_type" or fields_name == "language" or fields_name == "object_type" or fields_name == "applicable_node_type" or fields_name == "subject_applicable_nodetype" or fields_name == "object_applicable_nodetype" or fields_name == "data_type" %}
@@ -122,7 +128,7 @@
 
 {% elif fields_name == "subject_applicable_nodetype" or fields_name == "object_applicable_nodetype" or fields_name == "data_type" %}
 
-<div id="list_drawer" >
+<div id="list_drawer" class="list_drawer" >
   {#% edit_drawer_widget fields_name groupid node %#}
   {% list_widget fields_name fields_type fields_value  %}
 </div>
